fix: spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -214,7 +214,7 @@ div.col-8 {
 
 .plans .container-small {
     h2 {
-        margin: 2rem 0;
+        margin: 14rem 0 2rem;
         font-size: xx-large;
         text-align: left;
     }
